<resources>
    <string name="app_name">Gofore App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="wp_hostname">gofore.com</string>
    <string name="blog">Blog</string>
    <string name="post">Post</string>
    <string name="about">About</string>
    <string name="videos">Videos</string>
    <string name="pictures">Pictures</string>
    <string name="contact_us">Contact us</string>
    <string name="settings">Settings</string>
    <string name="loading">Loading</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="app_version">App version</string>
    <string name="syncing">Syncing</string>
    <string name="notifications">Notifications</string>
    <string name="retry">Retry</string>
    <string name="about_text"><![CDATA[<p>All content and graphics belong to Gofore.</p>\n<p>This application is <b>unofficial</b> mobile client for reading Gofore\'s blog. The application is made by <i>Sauli Anto</i> and it\'s done as a mobile development course exercise at Tampere University of Technology in 2018.</p>\n<p>© 2018 Gofore</p>]]></string>
</resources>
