<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/blogsFragment"
            android:icon="@drawable/ic_menu_whatshot"
            android:title="@string/blogs" />
        <item
            android:id="@+id/nav_videos"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/videos" />
        <item
            android:id="@+id/nav_pictures"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/pictures" />
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_menu_phone_msg"
            android:title="@string/contact_us" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/aboutFragment"
            android:icon="@drawable/ic_menu_info_outline"
            android:title="@string/about" />
    </group>

</menu>
