<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="notifications_category"
        app:title="@string/notifications">

        <SwitchPreferenceCompat
            app:key="notifications"
            app:title="Enable message notifications"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:key="syncing_category"
        app:title="@string/syncing">

        <SwitchPreferenceCompat
            app:key="enable_sync"
            app:title="Enable syncing" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="about_category"
        app:title="@string/about">

        <Preference
            app:key="version"
            app:title="@string/app_version"
            app:summary="0.0.0" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>