<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_main"
    app:startDestination="@id/blogsFragment">
    <fragment
        android:id="@+id/blogsFragment"
        android:name="li.sau.projectwork.ui.fragments.BlogsFragment"
        android:label="@string/blogs"
        tools:layout="@layout/fragment_blogs" >
        <action
            android:id="@+id/action_blogsFragment_to_blogFragment"
            app:destination="@id/blogFragment">
            <argument
                android:name="postId"
                app:argType="string" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/blogFragment"
        android:name="li.sau.projectwork.ui.fragments.BlogFragment"
        android:label="@string/blog"
        tools:layout="@layout/fragment_blog">
        <argument
            android:name="postId"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="li.sau.projectwork.ui.fragments.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="li.sau.projectwork.ui.fragments.SettingsFragment"
        android:label="@string/settings" />
</navigation>